--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "next": "14.0.4",
         "next-auth": "^5.0.0-beta.4",
         "next-themes": "^0.2.1",
+        "nodemailer": "^6.9.9",
         "react": "^18",
         "react-dom": "^18",
         "react-hook-form": "^7.49.3",
@@ -42,6 +43,7 @@
     },
     "devDependencies": {
         "@types/node": "^20",
+        "@types/nodemailer": "^6.4.14",
         "@types/react": "^18",
         "@types/react-dom": "^18",
         "@types/uuid": "^9.0.8",
