--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "@radix-ui/react-select": "^2.0.0",
         "@radix-ui/react-slot": "^1.0.2",
         "@radix-ui/react-switch": "^1.0.3",
+        "@reduxjs/toolkit": "^2.2.1",
         "@types/bcryptjs": "^2.4.6",
         "bcryptjs": "^2.4.3",
         "class-variance-authority": "^0.7.0",
@@ -33,6 +34,7 @@
         "react-dom": "^18",
         "react-hook-form": "^7.49.3",
         "react-icons": "^4.12.0",
+        "react-redux": "^9.1.0",
         "react-spinners": "^0.13.8",
         "resend": "^3.1.0",
         "sonner": "^1.4.0",
